fix overflow

--- a/WEB/src/assets/scss/common.scss
+++ b/WEB/src/assets/scss/common.scss
@@ -315,6 +315,7 @@ button.btn-sm {
     // height: 500px !important;
     outline: none;
     overflow-y: auto;
+    overflow-x: auto;
     padding: 12px 15px;
     tab-size: 4;
     -moz-tab-size: 4;
