--- a/WEB/src/views/post/style.scss
+++ b/WEB/src/views/post/style.scss
@@ -214,6 +214,7 @@
     height: 100%;
     outline: none;
     overflow-y: auto;
+    overflow-x: auto;
     padding: 12px 15px;
     tab-size: 4;
     -moz-tab-size: 4;
